2002-01-09  Wolfgang M&uuml;ller  <muellerw@cui.unige.ch>

	* libGIFTAcInvertedFile/include/uses-declarations.h:
	* libGIFTAcDistanceMatrix/include/uses-declarations.h:
	* libGIFTQuInvertedFile/include/uses-declarations.h:
	* libMRML/include/uses-declarations.h:
	* libGIFTAcHierarchy/include/uses-declarations.h:
	* libGIFTAcPerl/include/uses-declarations.h:
	* libGIFTQuHierarchy/include/uses-declarations.h:
	* libGIFTQuPerl/include/uses-declarations.h:
	* libGIFTAcURL2FTS/include/uses-declarations.h:

	Added header files containing the "using namespace" declarations
	for each library.

	* /libGIFTAcInvertedFile/include/CADIHash.h:
	* libGIFTAcInvertedFile/include/CAcSQLInvertedFile.h:
	* libGIFTAcInvertedFile/include/CDocumentFrequencyHash.h:
	* libGIFTAcInvertedFile/include/CDocumentFrequencyList.h:
	* libGIFTAcInvertedFile/include/CIFListStart.h:
	* libGIFTAcInvertedFile/include/CAdditionalDocumentInformation.h:
	* libGIFTAcInvertedFile/include/CBitSetCollection.h:
	* libGIFTAcInvertedFile/include/CAFSpecialised.h:
	* libGIFTAcInvertedFile/include/CIFBuilderTriplet.h:
	* libGIFTAcInvertedFile/include/CAFIFMySQL.h:
	* libGIFTAcInvertedFile/include/CInitializedDouble.h:
	* libGIFTAcInvertedFile/include/CInvertedFileChunk.h:
	* libGIFTAcInvertedFile/include/CAFInvertedFile.h:
	* libGIFTAcInvertedFile/include/CComparisonResults.h:
	* libGIFTAcInvertedFile/include/CAcInvertedFile.h:
	* libGIFTAcInvertedFile/include/CAcIFFileSystem.h:
	* libGIFTAcInvertedFile/include/CDocumentFrequencyElement.h:
	* libGIFTAcInvertedFile/include/CAcIFMySQL.h:
	* libGIFTAcInvertedFile/include/CAcInvertedFileAbstraction.h:
	* libGIFTAcDistanceMatrix/include/CSquasher.h:
	* libGIFTAcDistanceMatrix/include/CDistanceCalculator.h:
	* libGIFTAcDistanceMatrix/include/CPersistentTranslatedIndexMatrix.h:
	* libGIFTAcDistanceMatrix/include/CDrawer.h:
	* libGIFTAcDistanceMatrix/include/CInformationCalculator.h:
	* libGIFTAcDistanceMatrix/include/CIDToMatrixIndex.h: